variables.RunHalf.scala.error
Compilation error:
RunHalf:1: error: illegal start of simple pattern
var int orangeCells=0
                   ^RunHalf:2: error: '=' expected but ';' found.
var int baggles=0
^RunHalf:2: error: illegal start of simple pattern
var int baggles=0
               ^RunHalf:3: error: '=' expected but ';' found.
while ((2 * baggles = orangeCells + 1)==false) {
^