variables.RunHalf.scala.code
var int orangeCells=0
var int baggles=0
while ((2 * baggles = orangeCells + 1)==false) {
  forward()
  if (isOverOrange()==true) {
    orangeCells=orangeCells+1
  }
  if (isOverBaggle()==true) {
    baggles=baggles+1
  }
}